# outfit-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260627_9f8e7d6c5b4a_init_users_and_items.py  20260627_a1b2c3d4e5f6_add_w2_tables.py  20260627_b2c3d4e5f6a7_add_w3_tables.py  20260627_c3d4e5f6a7b8_add_w4_community_and_favorites.py  20260627_d4e5f6a7b8c9_add_follows_and_settings.py  20260629_e1f2a3b4c5d6_add_body_profile_active_index.py  20260629_f1g2h3i4j5k6_add_tryon_results.py  20260701_add_membership_credit_signin_puzzle.py  20260701_add_tryon_provider.py  20260702_add_favorite_tryon_results.py  20260702_update_tryon_provider_default.py
app/: main.py
app/core/: config.py  exceptions.py  responses.py  security.py  timezone.py
app/db/: base.py  dependencies.py  session.py
app/models/: __init__.py  body_profile.py  care_record.py  credit.py  favorite.py  follow.py  item.py  membership.py  model_template.py  order.py  outfit.py  post.py  promo_code.py  purchase_preview.py  puzzle_result.py  settings.py  sign_in.py  task.py  tryon_preset.py  tryon_result.py  user.py  wear_history.py
app/schemas/: auth.py  body_profile.py  care.py  common.py  community.py  credit.py  favorite.py  item.py  membership.py  order.py  outfit.py  promo_code.py  purchase_preview.py  puzzle.py  referral.py  sign_in.py  statistics.py  tryon.py  user.py  wear_history.py
scripts/: extract_mock.js  init_mock_data.py  mock_data.json  seed_from_mock.py
(+46 files in other folders)
